syntax = "proto3";
package pb;
option go_package = "gim/pkg/protocol/pb";

message ContentType {
  oneof content {
    ContentText text = 1;
    ContentLink link = 2;
    ContentImage image = 3;
    ContentDocument document = 4;
    ContentVideo video = 5;
  }
}

message ContentText {
  string text = 1;
}

message ContentLink {
  string link = 1;
  string text = 2;
}

message ContentImage {
  string name = 1;
  string thumb_url = 2;
  string resource_url = 3;
  string file_hash = 4;
  int32 file_status = 5;
}

message ContentDocument {
  string name = 1;
  string resource_url = 2;
  string file_hash = 3;
  int32 file_status = 5;
}

message ContentVideo {
  string name = 1;
  string resource_url = 2;
  string file_hash = 3;
  int32 file_status = 5;
}

message Content {
  ContentType content = 1;
}

enum TopicMetaType {
  TopicMetaType_Unknown = 0;
  TopicMetaType_Single = 1;
  TopicMetaType_Group = 2;
}

message TopicMeta {
  TopicMetaType meta_type = 1;
  TopicMetaId meta_id = 2;
}

message TopicMetaId {
  string group_id = 1;
  string sender_id = 2;
  string receiver_id = 3;
}

message GimMessage {
  string account_sn = 1; // Social account, the user id and the following account_id are the same
  TopicMeta topic_meta = 2; // Message identifier metadata message
  ContentType content_type = 3; // Message content type
  Content content = 4; // Message content
  string social_msg_id = 5; // Social software service msg id
  string msg_id = 6; // Internal message id
  int64 send_time = 7; // Message send time in milliseconds
  string account_id = 8; // Social account id in the social platform, which may be changed to a phone number (if the account is unregistered and then re-registered) and cannot uniquely identify the identifier of the social platform; if it is determined to be different, it can also be set to the same as account_sn
}